--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.114 2012/11/02 22:19:14 gilles Exp gilles $
+# $Id: TODO,v 1.118 2013/02/08 06:28:40 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -11,6 +11,8 @@ Add a best practice migration tips document.
 
 Write a Mail::imapsync package and use it.
 
+Remove 2.2.9 Mail::IMAPClient support.
+
 Fix the mailing-list archive bug with From at
 the beginning of a line
 http://www.linux-france.org/prj/imapsync_list/msg00307.html
@@ -20,6 +22,17 @@ http://www.rackspace.com/apps/email_hosting/migrations
 http://www.yippiemove.com/
 http://www.migrationwiz.com/
 http://www.microsoft.com/download/en/details.aspx?id=1329 "Microsoft Transporter Suite"
+
+Add --delete1 as an alias for --delete
+Add --mark-as-deleted1 --mark-as-deleted2 as
+aliases for --noexpunge1 --delete1 and --noexpunge2 --delete2
+
+Move --help documentation into the man page so that description is easier to find.
+
+Feature request for ImapSync.
+Can you setup an option to make it stop if the destination mailbox reports that it is over quota? 
+
+Print the list of messages not copied and why (duplicates or void header)
 
 Fix bug found by Pavel Stano on 01/06/2012 (june) imapsync never stop login
 when login fails with a "* BYE Temp error" from server.
