--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,49 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.518
+head: 1.525
 branch:
 locks: strict
-	gilles: 1.518
+	gilles: 1.525
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 518;	selected revisions: 518
+total revisions: 525;	selected revisions: 525
 description:
 ----------------------------
-revision 1.518	locked by: gilles;
+revision 1.525	locked by: gilles;
+date: 2013/02/05 12:52:10;  author: gilles;  state: Exp;  lines: +9 -9
+Typo synchronise -> synchronize.
+----------------------------
+revision 1.524
+date: 2013/01/31 20:41:29;  author: gilles;  state: Exp;  lines: +8 -7
+Small fix in help message.
+\\D
+----------------------------
+revision 1.523
+date: 2013/01/31 14:12:21;  author: gilles;  state: Exp;  lines: +118 -99
+Reorganized the --help message.
+----------------------------
+revision 1.522
+date: 2013/01/28 02:50:49;  author: gilles;  state: Exp;  lines: +13 -13
+Printing info with several host1 folder going to one host2 folder is in --debug mode now.
+----------------------------
+revision 1.521
+date: 2013/01/23 07:48:01;  author: gilles;  state: Exp;  lines: +7 -7
+Speed. --nocheckmessageexists is activated by default since --checkmessageexists often slow down transfers too much.
+----------------------------
+revision 1.520
+date: 2013/01/23 07:41:48;  author: gilles;  state: Exp;  lines: +103 -30
+Fix. Removed reference to DWTFPL since license is NOLIMIT now.
+License file is LICENSE now, no longer COPYING.
+Fix. Handle the case where several folders on host2 go to one folder on host1 with --delete2 option.
+     The bug was imapsync was copying messages and deleting them on next folder.
+----------------------------
+revision 1.519
+date: 2012/12/31 09:51:40;  author: gilles;  state: Exp;  lines: +11 -9
+Usability fix. --foldersizesatend is on if --foldersizes is on. Off if --nofoldersizesatend
+----------------------------
+revision 1.518
 date: 2012/12/24 00:27:34;  author: gilles;  state: Exp;  lines: +9 -6
 Bugfix. When identtifying with header, change tabulations to spaces (Gmail bug on with "Received:" on multilines).
 ----------------------------
