--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,41 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.536
+head: 1.542
 branch:
 locks: strict
-	gilles: 1.536
+	gilles: 1.542
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 536;	selected revisions: 536
+total revisions: 542;	selected revisions: 542
 description:
 ----------------------------
-revision 1.536	locked by: gilles;
+revision 1.542	locked by: gilles;
+date: 2013/05/06 08:30:35;  author: gilles;  state: Exp;  lines: +7 -7
+Syntax with "" fix.
+----------------------------
+revision 1.541
+date: 2013/05/06 07:10:29;  author: gilles;  state: Exp;  lines: +111 -74
+Started perlcritic corrections. Left 4 eval at level 5.
+----------------------------
+revision 1.540
+date: 2013/04/22 11:05:51;  author: gilles;  state: Exp;  lines: +11 -982
+Removed old 2.2.9 Mail::IMAPClient patch stuff.
+----------------------------
+revision 1.539
+date: 2013/04/22 00:54:22;  author: gilles;  state: Exp;  lines: +12 -12
+Fixed require namespace with uri_escape() calls.
+----------------------------
+revision 1.538
+date: 2013/04/22 00:46:54;  author: gilles;  state: Exp;  lines: +94 -9
+Added XOAUTH authentication. Thanks to Eduardo Bortoluzzi Junior.
+----------------------------
+revision 1.537
+date: 2013/04/19 06:59:17;  author: gilles;  state: Exp;  lines: +9 -9
+MDaemon 9.6.5, Surgemail 6.3d-72
+----------------------------
+revision 1.536
 date: 2013/04/17 14:33:12;  author: gilles;  state: Exp;  lines: +7 -7
 Added --delete1 as an alias for --delete
 ----------------------------
