--- a/README
+++ b/README
@@ -4,7 +4,7 @@ NAME
     More than 52 different IMAP server softwares supported with success, few
     failures.
 
-    $Revision: 1.536 $
+    $Revision: 1.542 $
 
 SYNOPSIS
     To synchronize imap account "foo" on "imap.truc.org" to imap account
@@ -191,6 +191,11 @@ SECURITY
     --proxyauth1 to enable administrative user to masquerade as another
     user. Can also be used on destination server with --proxyauth2
 
+    You can authenticate with OAUTH when transfering from Google Apps. The
+    consumer key will be the domain part of the --user, and the --password
+    will be used as the consumer secret. It does not work with Google Apps
+    free edition.
+
 EXIT STATUS
     imapsync will exit with a 0 status (return code) if everything went
     good. Otherwise, it exits with a non-zero status.
@@ -351,8 +356,8 @@ IMAP SERVERS
      - Kerio 7.2.0 Patch 1 [host1] [host2]
      - Mail2World IMAP4 Server 2.5 [host1] (http://www.mail2world.com/)
      - MailEnable 4.23 [host1] [host2], 4.26 [host1][host2], 5 [host1]
-     - MDaemon 7.0.1, 8.0.2, 8.1, 9.5.4 (Windows server 2003 R2 platform), 12 [host2],
-       12.0.3 [host1], 12.5.5 [host1],
+     - MDaemon 7.0.1, 8.0.2, 8.1, 9.5.4 (Windows server 2003 R2 platform), 
+       9.6.5 [host1], 12 [host2], 12.0.3 [host1], 12.5.5 [host1],
      - Mercury 4.1 (Windows server 2000 platform)
      - Microsoft Exchange Server 5.5, 6.0.6249.0[host1], 6.0.6487.0[host1], 
        6.5.7638.1 [host2], 6.5 [host1], Exchange 2007 SP1 (with Update Rollup 2), 
@@ -374,7 +379,7 @@ IMAP SERVERS
      - Softalk Workgroup Mail 7.6.4 [host1].
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
      - Sun Java(tm) System Messaging Server 6.2-2.05,  6.2-7.05, 6.3
-     - Surgemail 3.6f5-5
+     - Surgemail 3.6f5-5, 6.3d-72 [host2]
      - UW-imap servers (imap-2000b) rijkkramer IMAP4rev1 2000.287
        (RedHat uses UW like 2003.338rh), v12.264 Solaris 5.7 (OSI Approved) 
        (http://www.washington.edu/imap/)
@@ -458,5 +463,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.536 2013/04/17 14:33:12 gilles Exp gilles $
+    $Id: imapsync,v 1.542 2013/05/06 08:30:35 gilles Exp gilles $
 
