--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,44 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.542
+head: 1.547
 branch:
 locks: strict
-	gilles: 1.542
+	gilles: 1.547
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 542;	selected revisions: 542
+total revisions: 547;	selected revisions: 547
 description:
 ----------------------------
-revision 1.542	locked by: gilles;
+revision 1.547	locked by: gilles;
+date: 2013/07/03 01:24:34;  author: gilles;  state: Exp;  lines: +11 -8
+DBOX 2.41 success.
+Kerio 8 success.
+----------------------------
+revision 1.546
+date: 2013/07/02 03:49:32;  author: gilles;  state: Exp;  lines: +14 -8
+Fixed IO::Socket::IP bug on Win32?
+Removed SSL::DEBUG
+Added "copying.." in dry mode.
+----------------------------
+revision 1.545
+date: 2013/06/06 20:43:56;  author: gilles;  state: Exp;  lines: +27 -125
+Rmoved sub starttls()
+Removed sub myconnect()
+Removed sub RawSocket2()
+Applied patch from Jim Klimov to handle proxyauth failures
+----------------------------
+revision 1.544
+date: 2013/06/02 23:36:16;  author: gilles;  state: Exp;  lines: +25 -24
+Remove myconnect() use. Replaced by $imap->connect()
+Removed sub Split add in Mail::IMAPClient
+----------------------------
+revision 1.543
+date: 2013/05/22 01:22:03;  author: gilles;  state: Exp;  lines: +12 -7
+SSL_verify_mode 0 to avoid warning about Man-In-The-Middle.
+----------------------------
+revision 1.542
 date: 2013/05/06 08:30:35;  author: gilles;  state: Exp;  lines: +7 -7
 Syntax with "" fix.
 ----------------------------
