--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-# $Id: INSTALL,v 1.28 2013/05/14 08:19:08 gilles Exp gilles $
+# $Id: INSTALL,v 1.30 2013/07/03 04:13:52 gilles Exp gilles $
 # 
 # INSTALL file for imapsync 
 # imapsync : IMAP sync or copy tool.
@@ -55,7 +55,7 @@ b) Hard way:
 c) How to build imapsync.exe?
 
 - Do the hard stuff in b)
-- Run W/build_exe.bat (found in the tarball)
+- Run build_exe.bat (found in the tarball)
 
 PREREQUISITES 
 -------------
@@ -94,10 +94,10 @@ Here is some individual module help:
   New Mail-IMAPClient-3.xx works very well with imapsync,
   Use at least Mail-IMAPClient-3.25 (previous may bug).
   Don't hesitate to use latest Mail-IMAPClient-3.xx 
-  (3.xx >= 3.32 at the time of this writing)
+  (3.xx >= 3.33 at the time of this writing)
 
   Look at the script named "i3" in the tarball, it can be used to
-  run imapsync with included Mail-IMAPClient-3.32/ wherever you 
+  run imapsync with included Mail-IMAPClient-3.33/ wherever you 
   unpacked the imapsync tarball.
 
 
