--- a/README
+++ b/README
@@ -4,7 +4,7 @@ NAME
     More than 52 different IMAP server softwares supported with success, few
     failures.
 
-    $Revision: 1.542 $
+    $Revision: 1.547 $
 
 SYNOPSIS
     To synchronize imap account "foo" on "imap.truc.org" to imap account
@@ -317,7 +317,7 @@ IMAP SERVERS
      - Hotmail since hotmail.com does not provide IMAP access
      - Outlook.com since outlook.com does not provide IMAP access
 
-    Success stories reported with the following 52 imap servers (software
+    Success stories reported with the following 53 imap servers (software
     names are in alphabetic order):
 
      - 1und1 H mimap1 84498 [host1] H mibap4 95231 [host1]
@@ -340,6 +340,7 @@ IMAP SERVERS
      - Deerfield VisNetic MailServer 5.8.6 [host1] (http://www.deerfield.net/products/visnetic-mailserver/) 
      - DBMail 1.2.1, 2.0.4, 2.0.9, 2.2rc1 (GPL) (http://www.dbmail.org/).
        2.0.7 seems buggy.
+     - DBOX 2.41 System [host1] (http://www.dbox.handshake.de/).
      - Deerfield VisNetic MailServer 5.8.6 [host1]
      - dkimap4 [host1]
      - Domino (Notes) 4.61[host1], 6.5[host1], 5.0.6, 5.0.7, 7.0.2, 6.0.2CF1, 
@@ -353,7 +354,7 @@ IMAP SERVERS
      - hMailServer 5.3.3 [host2], 4.4.1 [host1] (see FAQ)
      - iPlanet Messaging server 4.15, 5.1, 5.2
      - IMail 7.15 (Ipswitch/Win2003), 8.12, 11.03 [host1]
-     - Kerio 7.2.0 Patch 1 [host1] [host2]
+     - Kerio 7.2.0 Patch 1 [host12], Kerio 8 [host1]
      - Mail2World IMAP4 Server 2.5 [host1] (http://www.mail2world.com/)
      - MailEnable 4.23 [host1] [host2], 4.26 [host1][host2], 5 [host1]
      - MDaemon 7.0.1, 8.0.2, 8.1, 9.5.4 (Windows server 2003 R2 platform), 
@@ -463,5 +464,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.542 2013/05/06 08:30:35 gilles Exp gilles $
+    $Id: imapsync,v 1.547 2013/07/03 01:24:34 gilles Exp gilles $
 
