--- a/W/Mail-IMAPClient-3.33/Changes
+++ b/W/Mail-IMAPClient-3.33/Changes
@@ -5,6 +5,18 @@ Changes from 2.99_01 to 3.16    made by Mark Overmeer
 Changes from 0.09    to 2.99_01 made by David Kernen
 	- Potential compatibility issues from 3.17+ highlighted with '*'
 
+version 3.33: Tue, May 14, 2013 10:12:43 AM
+	- more cleanup on use of $@ and $!
+	- cleanup get_bodystructure / get_envelope
+	- allow Ssl arg as an arrayref to pass args to IO::Socket::SSL
+	  [Ramana V Mokkapati]
+	- no need to Massage() the folder name in uidnext()
+	- rt.cpan.org#84028: get_envelope() fails when subject ends w/backslash
+	  [Andy Lyttle]
+	- rt.cpan.org#79476: move()/copy() with sequence causes numeric warning
+	  [Oleg G]
+	- *move()/copy() no longer sort message(s) provided by caller
+
 version 3.32: Fri, Aug 10, 2012  4:43:24 PM
 	- document RFC2087 quota related calls
           [Mathias Reitinger] documentation request
