--- a/FAQ
+++ b/FAQ
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: FAQ,v 1.133 2013/05/06 08:17:13 gilles Exp gilles $
+# $Id: FAQ,v 1.134 2013/06/02 23:34:02 gilles Exp gilles $
 
 +------------------+
 | FAQ for imapsync |
@@ -301,7 +301,7 @@ Q. How can I try imapsync with Mail::IMAPClient 3.xx perl module?
 R. The answer R2 deals with any Perl module use.
 
 R1 - Look at the script named i3 in the tarball, it can be used to
-     run imapsync with included Mail-IMAPClient-3.32/ wherever you 
+     run imapsync with included Mail-IMAPClient-3.33/ wherever you 
      unpacked the imapsync tarball
 
 R2 - Download latest Mail::IMAPClient 3.xx at
@@ -314,10 +314,10 @@ R2 - Download latest Mail::IMAPClient 3.xx at
    - run imapsync with perl and -I option tailing to use the perl
      module Mail-IMAPClient-3.xx. Example:
 
-         perl -I./Mail-IMAPClient-3.32/lib  ./imapsync ...
+         perl -I./Mail-IMAPClient-3.33/lib  ./imapsync ...
 
      or if imapsync is in directory /path/
-        perl -I./Mail-IMAPClient-3.32/lib   /path/imapsync ...
+        perl -I./Mail-IMAPClient-3.33/lib   /path/imapsync ...
 
 
 =======================================================================
@@ -1208,7 +1208,12 @@ Examples:
 
     --regextrans2 's/^INBOX\.(.+)/$1/'
 
-2) To sync a complete account in a subfolder called FOO:
+2a) To sync all folders to INBOX:
+
+  imapsync ... --regextrans2 "s/.*/INBOX/"
+
+
+2b) To sync a complete account in a subfolder called FOO:
   
   a) Seperator is dot character "." and "INBOX" prefixes every folder
   
