--- a/FAQ
+++ b/FAQ
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: FAQ,v 1.134 2013/06/02 23:34:02 gilles Exp gilles $
+# $Id: FAQ,v 1.135 2013/07/23 11:28:22 gilles Exp gilles $
 
 +------------------+
 | FAQ for imapsync |
@@ -1702,6 +1702,9 @@ R: --sep1 "/" --prefix1 ""
 
 Q: From MailEnable 2.2
 R: --sep1 "." --prefix1 ""
+
+Q: To MailEnable
+R: --sep2 / --prefix2 "" --addheader --messageidnodomain --syncflagsaftercopy
 
 ======================================================================
 Q. From GMX IMAP4 StreamProxy
