--- a/README
+++ b/README
@@ -4,7 +4,7 @@ NAME
     More than 52 different IMAP server softwares supported with success, few
     failures.
 
-    $Revision: 1.547 $
+    $Revision: 1.555 $
 
 SYNOPSIS
     To synchronize imap account "foo" on "imap.truc.org" to imap account
@@ -343,8 +343,8 @@ IMAP SERVERS
      - DBOX 2.41 System [host1] (http://www.dbox.handshake.de/).
      - Deerfield VisNetic MailServer 5.8.6 [host1]
      - dkimap4 [host1]
-     - Domino (Notes) 4.61[host1], 6.5[host1], 5.0.6, 5.0.7, 7.0.2, 6.0.2CF1, 
-       7.0.1[host1], 8.0.1[host1], 8.5.2[host2]
+     - Domino (Notes) 4.61 [host1], 6.5 [host1], 5.0.6, 5.0.7, 7.0.2, 6.0.2CF1, 
+       7.0.1 [host1], 8.0.1 [host1], 8.5.2 [host2], 8.5.3 [host1]
      - Dovecot 0.99.10.4, 0.99.14, 0.99.14-8.fc4, 1.0-0.beta2.7, 
        1.0.0 [dest/source] (LGPL) (http://www.dovecot.org/)
      - Eudora WorldMail v2
@@ -464,5 +464,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.547 2013/07/03 01:24:34 gilles Exp gilles $
+    $Id: imapsync,v 1.555 2013/07/23 11:41:10 gilles Exp gilles $
 
