--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.119 2013/04/17 13:04:21 gilles Exp gilles $
+# $Id: TODO,v 1.120 2013/07/22 07:40:44 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -11,7 +11,6 @@ Add a best practice migration tips document.
 
 Write a Mail::imapsync package and use it.
 
-Remove 2.2.9 Mail::IMAPClient support.
 
 Fix the mailing-list archive bug with From at
 the beginning of a line
@@ -26,7 +25,6 @@ http://www.microsoft.com/download/en/details.aspx?id=1329 "Microsoft Transporter
 Add an exit value when exiting because of --exitwhenover
 The goal is to know easily why to restart later.
 
-Add --delete1 as an alias for --delete
 Add --mark-as-deleted1 --mark-as-deleted2 as
 aliases for --noexpunge1 --delete1 and --noexpunge2 --delete2
 
@@ -48,9 +46,6 @@ Add a FAQ entry about long path over than 260 character on Win32.
 Fix long path over than 260 character on Win32. 
 Think about Digest::SHA or Digest::SHA::PurePerl.
 Think about a file database like DBM instead.
-
-Add OAUTH autentication support 
-https://developers.google.com/google-apps/gmail/oauth_overview
 
 Find a way to avoid passwords in --debugimap unless needed.
 
@@ -78,6 +73,7 @@ http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=503159
 http://www.linux-france.org/prj/imapsync_list/msg00022.html
 http://mail.google.com/support/bin/answer.py?hl=en&answer=77657
 http://mail.google.com/support/bin/answer.py?answer=78892 
+
 Look at larch https://github.com/rgrove/larch/ 
 http://wonko.com/
 
@@ -122,11 +118,6 @@ Fix bug with folder names starting with an asterisk: *Archiv
 Sending: 220 SELECT *Archiv/Support/foobar
 Read: 220 BAD Protokollfehler: "Invalid folder specified in SELECT command"
 
-Add automatic convertion or detection  when 
-separator inversion produces an invalid character.
-From uw to cyrus, for example :
-FoldA/FoldB.ext ->  FoldA.FoldB/ext
-
 Compare speed between 1.182 and 1.217
 "un mailbox de 90MB, ~2400 fichiers prends 80s avec la version 1.182 
 vs 250s avec la version 1.217". Marc Jauvin
@@ -159,8 +150,20 @@ http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 ===========================================================================
 
+DONE. Remove 2.2.9 Mail::IMAPClient support.
+
+DONE. Add OAUTH autentication support 
+https://developers.google.com/google-apps/gmail/oauth_overview
+
+DONE. Add --delete1 as an alias for --delete
+
 DONE. Add current date at the beginning of the run, useful when imapsync
 doesn't finish with statistics.
+
+DONE. Add automatic convertion or detection  when 
+separator inversion produces an invalid character.
+From uw to cyrus, for example :
+FoldA/FoldB.ext ->  FoldA.FoldB/ext
 
 DONE. Not donse since useless now (--useuid)
 Add a --skipheaderinfolder option 
